--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "e2e": "ng e2e",
     "rebuild": "electron-rebuild -f -w yourmodule",
     "electron": "ng build && electron .",
-    "electron-aot": "ng build --prod && electron ."
+    "electron-prod": "ng build --prod && electron ."
   },
   "private": true,
   "dependencies": {
